--- a/Experiment/Login.ipynb
+++ b/Experiment/Login.ipynb
@@ -11,6 +11,138 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 24,
+   "id": "3ef3cb70-9c02-4468-bb00-28362fc69ca6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import subprocess, os, signal\n",
+    "import pyautogui"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "bf497763-d37d-4753-98dc-c07945b710b4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys, os, decimal, json\n",
+    "sys.path.append(os.path.realpath('..'))\n",
+    "import json, time\n",
+    "import pyautogui\n",
+    "import socket\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "01db1d77-fa4c-43ac-94d7-7d325fb607a4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "config_dir = r'../MiningBot/Configs/configs.json'\n",
+    "config = json.load(open(config_dir))[socket.gethostname()]\n",
+    "game = Interface(config_dir=config_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "6b654312-4236-491b-ae8e-1a18d673528e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_processed_cords(x, y):\n",
+    "    return x + config['monitor_offset_x'], y + config['monitor_offset_y']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4dc44660-9ec7-4c3d-9e23-1c7df5f8876b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "process = subprocess.Popen(r'D:\\EVE\\Launcher\\evelauncher.exe', shell=False)\n",
+    "time.sleep(30)\n",
+    "pyautogui.moveTo(get_processed_cords(467,694))\n",
+    "time.sleep(0.1)\n",
+    "pyautogui.click(button='left')\n",
+    "time.sleep(30)\n",
+    "pyautogui.moveTo(get_processed_cords(611,364))\n",
+    "time.sleep(0.1)\n",
+    "pyautogui.click(button='left')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "19feb7bc-127d-444f-aa2a-7fb23eaf35b3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "66845780-712c-4b32-a5f8-3d16928d8e10",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "afa9be01-445b-4fda-88ca-0e4fe6ba5e53",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "49fd14ac-6194-43ad-9690-89e2c1b32271",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "76e7adc5-afa1-4bfb-8fed-2aee3582f534",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4a4c264c-91f5-485c-93de-982313efe389",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "39dbe4ef-c35f-4629-8486-201f956da420",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#os.kill(process.pid, signal.SIGTERM)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "631ec6f8-fe22-480d-b67b-159dfdcb9036",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "id": "078f7817-5bc8-4d9a-b8fd-1436dcefc191",
    "metadata": {},
