--- a/Experiment/Login.ipynb
+++ b/Experiment/Login.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "id": "3ef3cb70-9c02-4468-bb00-28362fc69ca6",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "id": "bf497763-d37d-4753-98dc-c07945b710b4",
    "metadata": {},
    "outputs": [],
@@ -31,24 +31,25 @@
     "sys.path.append(os.path.realpath('..'))\n",
     "import json, time\n",
     "import pyautogui\n",
-    "import socket\n"
+    "import socket\n",
+    "\n",
+    "import wmi"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "id": "01db1d77-fa4c-43ac-94d7-7d325fb607a4",
    "metadata": {},
    "outputs": [],
    "source": [
     "config_dir = r'../MiningBot/Configs/configs.json'\n",
-    "config = json.load(open(config_dir))[socket.gethostname()]\n",
-    "game = Interface(config_dir=config_dir)"
+    "config = json.load(open(config_dir))[socket.gethostname()]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "id": "6b654312-4236-491b-ae8e-1a18d673528e",
    "metadata": {},
    "outputs": [],
@@ -59,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "4dc44660-9ec7-4c3d-9e23-1c7df5f8876b",
    "metadata": {},
    "outputs": [],
@@ -72,12 +73,13 @@
     "time.sleep(30)\n",
     "pyautogui.moveTo(get_processed_cords(611,364))\n",
     "time.sleep(0.1)\n",
-    "pyautogui.click(button='left')"
+    "pyautogui.click(button='left')\n",
+    "time.sleep(60)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "19feb7bc-127d-444f-aa2a-7fb23eaf35b3",
    "metadata": {},
    "outputs": [],
@@ -85,35 +87,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "66845780-712c-4b32-a5f8-3d16928d8e10",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "os.kill(process.pid, signal.SIGTERM)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "id": "afa9be01-445b-4fda-88ca-0e4fe6ba5e53",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "f = wmi.WMI()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "49fd14ac-6194-43ad-9690-89e2c1b32271",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "eve_game_proc_id = None\n",
+    "for p in f.Win32_Process():\n",
+    "    if p.Name == 'exefile.exe':\n",
+    "        eve_game_proc_id = p.ProcessId\n",
+    "        break\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "76e7adc5-afa1-4bfb-8fed-2aee3582f534",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "os.kill(eve_game_proc_id, signal.SIGTERM)"
+   ]
   },
   {
    "cell_type": "code",
@@ -125,16 +139,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "39dbe4ef-c35f-4629-8486-201f956da420",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#os.kill(process.pid, signal.SIGTERM)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "id": "631ec6f8-fe22-480d-b67b-159dfdcb9036",
    "metadata": {},
@@ -143,431 +147,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "078f7817-5bc8-4d9a-b8fd-1436dcefc191",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import wmi"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "de581354-b0e8-4cae-9f55-26675b07e9b8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "f = wmi.WMI()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "a319bb94-ad65-4b44-b050-8b891878320e",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{0: 'System Idle Process',\n",
-       " 4: 'System',\n",
-       " 296: 'Secure System',\n",
-       " 408: 'Registry',\n",
-       " 836: 'smss.exe',\n",
-       " 1284: 'csrss.exe',\n",
-       " 1392: 'wininit.exe',\n",
-       " 1408: 'csrss.exe',\n",
-       " 1476: 'services.exe',\n",
-       " 1488: 'LsaIso.exe',\n",
-       " 1512: 'lsass.exe',\n",
-       " 1644: 'svchost.exe',\n",
-       " 1664: 'WUDFHost.exe',\n",
-       " 1676: 'fontdrvhost.exe',\n",
-       " 1792: 'svchost.exe',\n",
-       " 1836: 'svchost.exe',\n",
-       " 1916: 'winlogon.exe',\n",
-       " 1972: 'fontdrvhost.exe',\n",
-       " 1092: 'dwm.exe',\n",
-       " 1112: 'svchost.exe',\n",
-       " 1276: 'svchost.exe',\n",
-       " 1232: 'svchost.exe',\n",
-       " 2064: 'svchost.exe',\n",
-       " 2072: 'svchost.exe',\n",
-       " 2080: 'svchost.exe',\n",
-       " 2220: 'svchost.exe',\n",
-       " 2240: 'svchost.exe',\n",
-       " 2288: 'svchost.exe',\n",
-       " 2356: 'svchost.exe',\n",
-       " 2404: 'svchost.exe',\n",
-       " 2516: 'svchost.exe',\n",
-       " 2588: 'svchost.exe',\n",
-       " 2684: 'svchost.exe',\n",
-       " 2840: 'vmms.exe',\n",
-       " 2852: 'svchost.exe',\n",
-       " 3008: 'svchost.exe',\n",
-       " 3064: 'NVDisplay.Container.exe',\n",
-       " 2632: 'svchost.exe',\n",
-       " 3092: 'svchost.exe',\n",
-       " 3164: 'svchost.exe',\n",
-       " 3276: 'svchost.exe',\n",
-       " 3272: 'svchost.exe',\n",
-       " 3288: 'svchost.exe',\n",
-       " 3300: 'svchost.exe',\n",
-       " 3428: 'svchost.exe',\n",
-       " 3464: 'svchost.exe',\n",
-       " 3508: 'Memory Compression',\n",
-       " 3564: 'svchost.exe',\n",
-       " 3576: 'svchost.exe',\n",
-       " 3672: 'svchost.exe',\n",
-       " 3840: 'svchost.exe',\n",
-       " 3856: 'svchost.exe',\n",
-       " 3960: 'NVDisplay.Container.exe',\n",
-       " 4032: 'WmiPrvSE.exe',\n",
-       " 3404: 'vmcompute.exe',\n",
-       " 4232: 'svchost.exe',\n",
-       " 4288: 'svchost.exe',\n",
-       " 4296: 'svchost.exe',\n",
-       " 4492: 'svchost.exe',\n",
-       " 4672: 'svchost.exe',\n",
-       " 4800: 'svchost.exe',\n",
-       " 4932: 'spoolsv.exe',\n",
-       " 5036: 'svchost.exe',\n",
-       " 5212: 'svchost.exe',\n",
-       " 5220: 'svchost.exe',\n",
-       " 5232: 'svchost.exe',\n",
-       " 5248: 'svchost.exe',\n",
-       " 5272: 'svchost.exe',\n",
-       " 5280: 'svchost.exe',\n",
-       " 5300: 'svchost.exe',\n",
-       " 5316: 'svchost.exe',\n",
-       " 5324: 'svchost.exe',\n",
-       " 5332: 'svchost.exe',\n",
-       " 5344: 'svchost.exe',\n",
-       " 5356: 'svchost.exe',\n",
-       " 5372: 'AdobeUpdateService.exe',\n",
-       " 5408: 'horizon_client_service.exe',\n",
-       " 5428: 'NortonSecurity.exe',\n",
-       " 5444: 'MigrationService.exe',\n",
-       " 5452: 'BtwRSupportService.exe',\n",
-       " 5484: 'FNPLicensingService64.exe',\n",
-       " 5492: 'ftnlsv.exe',\n",
-       " 5500: 'NahimicService.exe',\n",
-       " 5536: 'synergyd.exe',\n",
-       " 5548: 'vmwsprrdpwks.exe',\n",
-       " 5556: 'lghub_updater.exe',\n",
-       " 5560: 'SamsungMagicianSVC.exe',\n",
-       " 5584: 'TpcastDaemon.exe',\n",
-       " 5592: 'nvcontainer.exe',\n",
-       " 5664: 'AdskLicensingService.exe',\n",
-       " 5720: 'ftscanmgrhv.exe',\n",
-       " 5728: 'sqlwriter.exe',\n",
-       " 5736: 'vmware-usbarbitrator64.exe',\n",
-       " 5748: 'AGSService.exe',\n",
-       " 5788: 'OfficeClickToRun.exe',\n",
-       " 5820: 'AGMService.exe',\n",
-       " 5896: 'OriginWebHelperService.exe',\n",
-       " 5672: 'svchost.exe',\n",
-       " 6476: 'nsWscSvc.exe',\n",
-       " 7000: 'com.docker.service',\n",
-       " 7044: 'WmiPrvSE.exe',\n",
-       " 7864: 'AggregatorHost.exe',\n",
-       " 8024: 'unsecapp.exe',\n",
-       " 7812: 'rundll32.exe',\n",
-       " 9420: 'svchost.exe',\n",
-       " 9484: 'svchost.exe',\n",
-       " 11032: 'NortonSecurity.exe',\n",
-       " 11184: 'sihost.exe',\n",
-       " 10328: 'svchost.exe',\n",
-       " 10356: 'svchost.exe',\n",
-       " 10548: 'taskhostw.exe',\n",
-       " 10748: 'svchost.exe',\n",
-       " 11340: 'svchost.exe',\n",
-       " 11620: 'svchost.exe',\n",
-       " 11860: 'ctfmon.exe',\n",
-       " 12424: 'svchost.exe',\n",
-       " 12556: 'svchost.exe',\n",
-       " 12676: 'explorer.exe',\n",
-       " 13660: 'svchost.exe',\n",
-       " 13740: 'nvcontainer.exe',\n",
-       " 13780: 'nvcontainer.exe',\n",
-       " 13844: 'svchost.exe',\n",
-       " 14144: 'NVIDIA Web Helper.exe',\n",
-       " 14188: 'conhost.exe',\n",
-       " 12816: 'StartMenuExperienceHost.exe',\n",
-       " 12860: 'SearchHost.exe',\n",
-       " 13180: 'RuntimeBroker.exe',\n",
-       " 13276: 'RuntimeBroker.exe',\n",
-       " 14372: 'svchost.exe',\n",
-       " 14652: 'dllhost.exe',\n",
-       " 15044: 'svchost.exe',\n",
-       " 15120: 'WUDFHost.exe',\n",
-       " 15584: 'dasHost.exe',\n",
-       " 15796: 'svchost.exe',\n",
-       " 15856: 'svchost.exe',\n",
-       " 16256: 'svchost.exe',\n",
-       " 16368: 'svchost.exe',\n",
-       " 9600: 'BraveCrashHandler.exe',\n",
-       " 9568: 'GoogleCrashHandler.exe',\n",
-       " 18064: 'GoogleCrashHandler64.exe',\n",
-       " 18080: 'BraveCrashHandler64.exe',\n",
-       " 10420: 'dllhost.exe',\n",
-       " 1504: 'svchost.exe',\n",
-       " 12400: 'svchost.exe',\n",
-       " 8808: 'SamsungPortableSSDMon.exe',\n",
-       " 5604: 'svchost.exe',\n",
-       " 18580: 'nvsphelper64.exe',\n",
-       " 18636: 'NVIDIA Share.exe',\n",
-       " 18208: 'NVIDIA Share.exe',\n",
-       " 16740: 'NVIDIA Share.exe',\n",
-       " 10348: 'TextInputHost.exe',\n",
-       " 19276: 'SecurityHealthSystray.exe',\n",
-       " 19324: 'SecurityHealthService.exe',\n",
-       " 19608: 'svchost.exe',\n",
-       " 20740: 'steam.exe',\n",
-       " 21192: 'CCXProcess.exe',\n",
-       " 21240: 'node.exe',\n",
-       " 21268: 'conhost.exe',\n",
-       " 18280: 'lghub.exe',\n",
-       " 17820: 'svchost.exe',\n",
-       " 15252: 'AdobeIPCBroker.exe',\n",
-       " 18192: 'lghub_system_tray.exe',\n",
-       " 19428: 'lghub.exe',\n",
-       " 16232: 'lghub.exe',\n",
-       " 20068: 'lghub_agent.exe',\n",
-       " 20444: 'GoogleDriveFS.exe',\n",
-       " 20660: 'crashpad_handler.exe',\n",
-       " 13172: 'GoogleDriveFS.exe',\n",
-       " 13992: 'GoogleDriveFS.exe',\n",
-       " 16336: 'msedge.exe',\n",
-       " 8836: 'unsecapp.exe',\n",
-       " 17148: 'conhost.exe',\n",
-       " 16412: 'msedge.exe',\n",
-       " 21536: 'GoogleDriveFS.exe',\n",
-       " 21576: 'GoogleDriveFS.exe',\n",
-       " 21980: 'GoogleDriveFS.exe',\n",
-       " 21992: 'GoogleDriveFS.exe',\n",
-       " 22344: 'msedge.exe',\n",
-       " 22360: 'msedge.exe',\n",
-       " 22512: 'msedge.exe',\n",
-       " 21108: 'msedge.exe',\n",
-       " 22636: 'msedge.exe',\n",
-       " 22824: 'msedge.exe',\n",
-       " 25156: 'steamwebhelper.exe',\n",
-       " 25296: 'steamwebhelper.exe',\n",
-       " 25332: 'chrome.exe',\n",
-       " 25356: 'chrome.exe',\n",
-       " 25420: 'SteamService.exe',\n",
-       " 25572: 'chrome.exe',\n",
-       " 25588: 'chrome.exe',\n",
-       " 25196: 'chrome.exe',\n",
-       " 20936: 'chrome.exe',\n",
-       " 21044: 'chrome.exe',\n",
-       " 18008: 'chrome.exe',\n",
-       " 22980: 'steamwebhelper.exe',\n",
-       " 24672: 'chrome.exe',\n",
-       " 25776: 'steamwebhelper.exe',\n",
-       " 21316: 'nahimicNotifSys.exe',\n",
-       " 24384: 'Cortana.exe',\n",
-       " 27336: 'RuntimeBroker.exe',\n",
-       " 26968: 'RuntimeBroker.exe',\n",
-       " 26792: 'svchost.exe',\n",
-       " 27236: 'svchost.exe',\n",
-       " 26800: 'svchost.exe',\n",
-       " 29032: 'jusched.exe',\n",
-       " 10020: 'iCUE.exe',\n",
-       " 14324: 'Creative Cloud.exe',\n",
-       " 30652: 'ShellExperienceHost.exe',\n",
-       " 26696: 'RuntimeBroker.exe',\n",
-       " 27740: 'Creative Cloud UI Helper.exe',\n",
-       " 27776: 'Adobe Desktop Service.exe',\n",
-       " 27972: 'Creative Cloud UI Helper.exe',\n",
-       " 28232: 'Creative Cloud Helper.exe',\n",
-       " 28556: 'CCLibrary.exe',\n",
-       " 28752: 'node.exe',\n",
-       " 28768: 'conhost.exe',\n",
-       " 28524: 'Creative Cloud Helper.exe',\n",
-       " 31364: 'CoreSync.exe',\n",
-       " 31328: 'steamwebhelper.exe',\n",
-       " 31228: 'AdobeNotificationClient.exe',\n",
-       " 14128: 'Adobe Installer.exe',\n",
-       " 11760: 'RuntimeBroker.exe',\n",
-       " 30256: 'steamwebhelper.exe',\n",
-       " 31576: 'steamwebhelper.exe',\n",
-       " 17916: 'steamwebhelper.exe',\n",
-       " 30876: 'SgrmBroker.exe',\n",
-       " 32148: 'uhssvc.exe',\n",
-       " 2148: 'svchost.exe',\n",
-       " 32072: 'svchost.exe',\n",
-       " 17332: 'ApplicationFrameHost.exe',\n",
-       " 27180: 'jucheck.exe',\n",
-       " 19296: 'GameBar.exe',\n",
-       " 8116: 'Video.UI.exe',\n",
-       " 26264: 'GameBarFTServer.exe',\n",
-       " 6920: 'RuntimeBroker.exe',\n",
-       " 27808: 'RuntimeBroker.exe',\n",
-       " 31540: 'svchost.exe',\n",
-       " 2808: 'crashpad_handler.exe',\n",
-       " 4840: 'crashpad_handler.exe',\n",
-       " 8316: 'svchost.exe',\n",
-       " 13952: 'cmd.exe',\n",
-       " 9280: 'cmd.exe',\n",
-       " 7040: 'conhost.exe',\n",
-       " 14996: 'conhost.exe',\n",
-       " 2952: 'python.exe',\n",
-       " 27112: 'python.exe',\n",
-       " 9012: 'jupyter-lab.exe',\n",
-       " 28096: 'python.exe',\n",
-       " 24896: 'python.exe',\n",
-       " 6208: 'msedge.exe',\n",
-       " 32212: 'msedge.exe',\n",
-       " 24824: 'conhost.exe',\n",
-       " 11504: 'powershell.exe',\n",
-       " 33312: 'msedge.exe',\n",
-       " 24968: 'RuntimeBroker.exe',\n",
-       " 9504: 'WmiPrvSE.exe',\n",
-       " 33824: 'svchost.exe',\n",
-       " 2204: 'chrome.exe',\n",
-       " 34256: 'dllhost.exe',\n",
-       " 36116: 'mspaint.exe',\n",
-       " 27868: 'chrome.exe',\n",
-       " 26476: 'chrome.exe',\n",
-       " 36288: 'SearchIndexer.exe',\n",
-       " 13028: 'pycharm64.exe',\n",
-       " 26956: 'fsnotifier64.exe',\n",
-       " 25908: 'conhost.exe',\n",
-       " 40844: 'taskhostw.exe',\n",
-       " 32552: 'chrome.exe',\n",
-       " 37808: 'notepad++.exe',\n",
-       " 37952: 'crashpad_handler.exe',\n",
-       " 40148: 'chrome.exe',\n",
-       " 19588: 'crashpad_handler.exe',\n",
-       " 39396: 'crashpad_handler.exe',\n",
-       " 40876: 'crashpad_handler.exe',\n",
-       " 25268: 'dllhost.exe',\n",
-       " 38896: 'crashpad_handler.exe',\n",
-       " 38548: 'chrome.exe',\n",
-       " 24588: 'dllhost.exe',\n",
-       " 15516: 'chrome.exe',\n",
-       " 39576: 'crashpad_handler.exe',\n",
-       " 30276: 'chrome.exe',\n",
-       " 40512: 'svchost.exe',\n",
-       " 21676: 'chrome.exe',\n",
-       " 31628: 'chrome.exe',\n",
-       " 40692: 'chrome.exe',\n",
-       " 41052: 'chrome.exe',\n",
-       " 40252: 'chrome.exe',\n",
-       " 1044: 'MongoDBCompass.exe',\n",
-       " 10388: 'MongoDBCompass.exe',\n",
-       " 7112: 'MongoDBCompass.exe',\n",
-       " 32540: 'svchost.exe',\n",
-       " 42232: 'MongoDBCompass.exe',\n",
-       " 33624: 'WINWORD.EXE',\n",
-       " 34316: 'ai.exe',\n",
-       " 32960: 'svchost.exe',\n",
-       " 46632: 'chrome.exe',\n",
-       " 32848: 'cmd.exe',\n",
-       " 38204: 'conhost.exe',\n",
-       " 78452: 'msteams.exe',\n",
-       " 77032: 'msedgewebview2.exe',\n",
-       " 73560: 'msedgewebview2.exe',\n",
-       " 66292: 'msedgewebview2.exe',\n",
-       " 55188: 'msedgewebview2.exe',\n",
-       " 27880: 'msedgewebview2.exe',\n",
-       " 51192: 'msedgewebview2.exe',\n",
-       " 57780: 'chrome.exe',\n",
-       " 75984: 'chrome.exe',\n",
-       " 79192: 'chrome.exe',\n",
-       " 78540: 'chrome.exe',\n",
-       " 77260: 'chrome.exe',\n",
-       " 26892: 'mspaint.exe',\n",
-       " 76304: 'crashpad_handler.exe',\n",
-       " 79644: 'chrome.exe',\n",
-       " 78864: 'chrome.exe',\n",
-       " 80784: 'chrome.exe',\n",
-       " 37792: 'chrome.exe',\n",
-       " 76296: 'chrome.exe',\n",
-       " 80648: 'msedge.exe',\n",
-       " 74148: 'OneDrive.exe',\n",
-       " 32244: 'dllhost.exe',\n",
-       " 78304: 'chrome.exe',\n",
-       " 39932: 'chrome.exe',\n",
-       " 78224: 'chrome.exe',\n",
-       " 72944: 'Corsair.Service.exe',\n",
-       " 78260: 'chrome.exe',\n",
-       " 73532: 'chrome.exe',\n",
-       " 80188: 'chrome.exe',\n",
-       " 2748: 'chrome.exe',\n",
-       " 39456: 'chrome.exe',\n",
-       " 35780: 'msedge.exe',\n",
-       " 77692: 'svchost.exe',\n",
-       " 76996: 'chrome.exe',\n",
-       " 79708: 'evelauncher.exe',\n",
-       " 73368: 'crashpad_handler.exe',\n",
-       " 35388: 'QtWebEngineProcess.exe',\n",
-       " 77636: 'QtWebEngineProcess.exe',\n",
-       " 5124: 'python.exe',\n",
-       " 78640: 'python.exe',\n",
-       " 73776: 'Widgets.exe',\n",
-       " 68256: 'msedgewebview2.exe',\n",
-       " 41320: 'msedgewebview2.exe',\n",
-       " 68820: 'msedgewebview2.exe',\n",
-       " 56556: 'msedgewebview2.exe',\n",
-       " 25692: 'msedgewebview2.exe',\n",
-       " 63876: 'msedgewebview2.exe',\n",
-       " 69828: 'chrome.exe',\n",
-       " 26396: 'PhoneExperienceHost.exe',\n",
-       " 51244: 'armsvc.exe',\n",
-       " 43896: 'svchost.exe',\n",
-       " 60220: 'svchost.exe',\n",
-       " 21104: 'chrome.exe',\n",
-       " 50964: 'chrome.exe',\n",
-       " 48484: 'chrome.exe',\n",
-       " 48812: 'chrome.exe',\n",
-       " 4940: 'audiodg.exe',\n",
-       " 48904: 'exefile.exe',\n",
-       " 65596: 'eve_crashmon.exe',\n",
-       " 44284: 'GameBarPresenceWriter.exe',\n",
-       " 49716: 'svchost.exe',\n",
-       " 43540: 'svchost.exe',\n",
-       " 49720: 'svchost.exe',\n",
-       " 38216: 'chrome.exe',\n",
-       " 27416: 'chrome.exe',\n",
-       " 48568: 'chrome.exe',\n",
-       " 9044: 'chrome.exe',\n",
-       " 28952: 'chrome.exe',\n",
-       " 24516: 'chrome.exe',\n",
-       " 78012: 'chrome.exe',\n",
-       " 62320: 'chrome.exe',\n",
-       " 51636: 'chrome.exe',\n",
-       " 80160: 'chrome.exe',\n",
-       " 50724: 'chrome.exe',\n",
-       " 35776: 'chrome.exe',\n",
-       " 48016: 'chrome.exe',\n",
-       " 62248: 'chrome.exe',\n",
-       " 49124: 'chrome.exe',\n",
-       " 56924: 'chrome.exe',\n",
-       " 72932: 'msedge.exe',\n",
-       " 24624: 'conhost.exe',\n",
-       " 78420: 'powershell.exe',\n",
-       " 51660: 'Taskmgr.exe',\n",
-       " 55780: 'chrome.exe',\n",
-       " 64836: 'svchost.exe',\n",
-       " 50956: 'SearchProtocolHost.exe',\n",
-       " 37752: 'SearchFilterHost.exe'}"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "processes = {}\n",
-    "for p in f.Win32_Process():\n",
-    "    processes[p.ProcessId] = p.Name\n",
-    "processes"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
