--- a/Experiment/Login.ipynb
+++ b/Experiment/Login.ipynb
@@ -61,11 +61,44 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "1d82ff4c-44bf-4da5-89a3-96aef7e9400a",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[5], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msystem\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43mr\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mD:\u001b[39;49m\u001b[38;5;124;43m\\\u001b[39;49m\u001b[38;5;124;43mEVE\u001b[39;49m\u001b[38;5;124;43m\\\u001b[39;49m\u001b[38;5;124;43mLauncher\u001b[39;49m\u001b[38;5;124;43m\\\u001b[39;49m\u001b[38;5;124;43mevelauncher.exe\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "os.system(r'D:\\EVE\\Launcher\\evelauncher.exe')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "c1db0d7f-00dd-4e58-aeca-c43f0a1060c9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.startfile(r'D:\\EVE\\Launcher\\evelauncher.exe')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "4dc44660-9ec7-4c3d-9e23-1c7df5f8876b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "process = subprocess.Popen(r'D:\\EVE\\Launcher\\evelauncher.exe', shell=False)\n",
+    "#process = subprocess.Popen(r'D:\\EVE\\Launcher\\evelauncher.exe', start_new_session=True)\n",
+    "#process = subprocess.Popen(r'D:\\EVE\\Launcher\\evelauncher.exe', shell=False)\n",
     "time.sleep(30)\n",
     "pyautogui.moveTo(get_processed_cords(467,694))\n",
     "time.sleep(0.1)\n",
