--- a/Experiment/Overlay.ipynb
+++ b/Experiment/Overlay.ipynb
@@ -122,6 +122,7 @@
     "draw_movement(*config['click_and_drag_inv_line'], color='limegreen')\n",
     "draw_target(*config['exit_hanger_target'], color='red')\n",
     "draw_target(*config['scanner_button_target'], color='red')\n",
+    "draw_target(*config['mining_hold_target'], color='limegreen')\n",
     "\n",
     "drawbox(*config['cargo_box'])\n",
     "drawbox(*config['locations_box'])\n",
